# cppTewart

./: 1cppTewart.code-workspace  CMakeLists.txt  README.md  animation.cpp  build.bat  cppTewart.code-workspace  imgui.ini  imgui_demo.cpp  main.cpp  stewart_gui.cpp  stewart_platform.cpp  stewart_plots.cpp
include/: animation.h  main.h  stewart_gui.h  stewart_platform.h  stewart_plots.h
include/config/: stewart_config.json
